was informed of the need to branch out

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <p>Being a goblin is no easy task. Dirt! Sometimes there's dirt. Or code! Sometimes there's code. I am but a smol creacher, I cannot change this. Please be gentle in your heart and sharp in your claws. Be clever, be curious, be kind. Above all, love one another and yourself.
     </p>
 
+    <h2>Here is a representation of an goblin, like a you or a me:</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7O6PZMxQ3vP-tnyCIoXD8XFII6cEq5LHjPKBM6yH0U4cZYgeQ" alt="a picture of a goblin who has dark har, glasses, and large ears">
+
     <h2>Some little-known facts about me, an goblin:</h2>
     <ul>
         <li>identity is disaster-femme</li>
