added css styling, image, font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
 
     <h2>Here is a representation of an goblin, like a you or a me:</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7O6PZMxQ3vP-tnyCIoXD8XFII6cEq5LHjPKBM6yH0U4cZYgeQ" alt="a picture of a goblin who has dark har, glasses, and large ears">
+    <img class="goblin" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7O6PZMxQ3vP-tnyCIoXD8XFII6cEq5LHjPKBM6yH0U4cZYgeQ" alt="a picture of a goblin who has dark har, glasses, and large ears">
 
     <h2>Some little-known facts about me, an goblin:</h2>
     <ul>
