restyled css elements and html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>smol goblin</title>
 </head>
 <body>
+   
     <h1>On Monsters and Ostensibly Myself</h1>
-    <p>Being a goblin is no easy task. Dirt! Sometimes there's dirt. Or code! Sometimes there's code. I am but a smol creacher, I cannot change this. Please be gentle in your heart and sharp in your claws. Be clever, be curious, be kind. Above all, love one another and yourself.
+    <p>Being a goblin is no easy task. <br>
+        Dirt! Sometimes there's dirt. <br>
+        Or code! Sometimes there's code. <br>
+        I am but a smol creacher, I cannot change this. <br>
+        Please be gentle in your heart and sharp in your claws. <br>
+        Be clever, be curious, be kind. Above all, love one another and yourself. <br>
     </p>
 
     <h2>Here is a representation of an goblin, like a you or a me:</h2>
@@ -30,5 +36,6 @@
         <li>DO KINDNESS</li>
         <li>HISS FOREVER</li>
     </ol>
+    
 </body>
 </html>
