html questions, boxes, submit button, and results paragraph initialized

--- a/index.html
+++ b/index.html
@@ -35,7 +35,31 @@
         <li>SAY I LOVE YOU</li>
         <li>DO KINDNESS</li>
         <li>HISS FOREVER</li>
+        <li>HYDRATE OR DIEDRATE</li>
     </ol>
     
+    <section>
+        <h2>testin' knowledge?</h2>
+
+        <label for="q1">cuddle...?</label>
+        <input id="q1">
+
+        <label for="q2">say...?</label>
+        <input id="q2">
+
+        <label for="q3">do...?</label>
+        <input type="q3">
+
+        <label for="q4">hiss...?</label>
+        <input id="q4">
+
+        <label for="q5">hydrate or...?</label>
+        <input id="q5">
+
+        <button id="submit-button">SMASH</button>
+
+        <p id="html-paragraph">you must first TEST your KNOWING!</p>
+    </section>
+
 </body>
 </html>
