added src file, index.js file, linked module into html file

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         <label for="q5">hydrate or...?</label>
         <input id="q5">
 
-        <button id="submit-button">SMASH</button>
+        <button id="submit-button">SMASH</button 
 
         <p id="html-paragraph">you must first TEST your KNOWING!</p>
     </section>
+    <script type="module" src="src/index.js"></script>
 
 </body>
 </html>
