--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
     <section>
         <h2>testin' knowledge?</h2>
 
-        <label for="q1">cuddle...?</label>
-        <input id="q1">
+        <label for="cuddle">cuddle...?</label>
+        <input id="cuddle">
 
-        <label for="q2">say...?</label>
-        <input id="q2">
+        <label for="say">say...?</label>
+        <input id="say">
 
-        <label for="q3">do...?</label>
-        <input type="q3">
+        <label for="do1">do...?</label>
+        <input type="do1">
 
-        <label for="q4">hiss...?</label>
-        <input id="q4">
+        <label for="hiss">hiss...?</label>
+        <input id="hiss">
 
-        <label for="q5">hydrate or...?</label>
-        <input id="q5">
+        <label for="hydrate">hydrate or...?</label>
+        <input id="hydrate">
 
         <button id="submit-button">SMASH</button> 
 
