fixed linter issues in all files, console logged variables in callback function

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <input id="say">
 
         <label for="do1">do...?</label>
-        <input type="do1">
+        <input id="do1">
 
         <label for="hiss">hiss...?</label>
         <input id="hiss">
